<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Relasi</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="event_name">Open Recruitment Anggota PPI 2021</string>
    <string name="event_admin">Peduli Pendidikan Indonesia</string>
    <string name="event_date">February, 27 2021</string>
    <string name="event_location">Rungkut, Surabaya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="education">education</string>
    <string name="all">All</string>
    <string name="hunger">Hunger</string>
    <string name="poverty">Poverty</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="our_recommendation">Our Recommendation</string>
    <string name="health">Health</string>
    <string name="environment">Environment</string>
    <string name="education2">Education</string>
    <string name="todo7">TODO</string>
    <string name="event_location2">Event Location</string>
    <string name="current_location">Current Location</string>
    <string name="todo">TODO</string>
    <string name="todo8">TODO</string>
    <string name="add_a_filter">Add a Filter</string>
    <string name="reset">Reset</string>
    <string name="sorting_by">Sorting By</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="relawan_nabung_bolu_surabaya">Relawan Nabung Bolu Surabaya</string>
    <string name="_19_00_wib">19.00 WIB</string>
    <string name="gerakan_peduli_kemanusian">Gerakan Peduli Kemanusian</string>
    <string name="surabaya">Surabaya</string>
    <string name="_128_participants">128 Participants</string>
    <string name="story">Story</string>
    <string name="task_detail">Task Detail</string>
    <string name="description">Description</string>
    <string name="description_real">
        "Nabung Bolu merupakan kegiatan rutin dari Gerakan Peduli Kemanusian (GERPIK) yang bertujuan membantu saudara-saudara kita agar mereka bisa tidur dengan nyenyak tanpa menahan lapar. \n\n"
        "Dengan hastag #UntukKemanusiaan kami berkomitmen untuk terus melakukan ini. \n\n"
        "Siapa target kami? tukang becak, pemulung, tukang kebersihan maupun gelandangan. Kegiatan ini sangat sederhana namun dirindukan. \n"
    </string>
    <string name="join">Join</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_enter_your_account_here">Please enter your account here!</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="didn_t_have_any_account">Didn’t have any account?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="welcome2">Welcome!</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="if_you_have_an_account">If you have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_your_account_here2">Please enter your account here!</string>
    <string name="_00_12">00:12</string>
    <string name="code_expires_in">code expires in:</string>
    <string name="we_ve_sent_the_code_to_your_email">We.ve sent the code to your email</string>
    <string name="check_your_email">Check your email</string>
    <string name="verify">Verify</string>
    <string name="send_again">Send Again</string>
    <string name="password_recovery">Password recovery</string>
    <string name="enter_your_email_to_recover_your_password">Enter your email to recover your password</string>
    <string name="sign_in">Sign In</string>
    <string name="finish_password_recovery">finish password recovery?</string>
    <string name="todo9">TODO</string>
    <string name="todo12">TODO</string>
    <string name="ok">OK</string>
    <string name="you_have_succesfully_add_new_asset_s_data_of_diklat">You have succesfully add new asset’s data of Diklat.</string>
    <string name="verification_succeed">Verification Succeed!</string>
    <string name="todo13">TODO2</string>
</resources>