<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:alpha="0.8"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/password_recovery"
            android:textColor="@color/dark_main"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="64dp"
            android:alpha="0.8"
            android:fontFamily="@font/nunito_semibold"
            android:paddingTop="12dp"
            android:text="@string/enter_your_email_to_recover_your_password"
            android:textAlignment="center"
            android:textColor="@color/dark_main"
            android:textSize="15sp" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_recovery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="373dp"
        android:background="@drawable/border_button"
        android:drawableStart="@drawable/message"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:selectAllOnFocus="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:autofillHints="" />

    <Button
        android:id="@+id/recover_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button"
        android:fontFamily="@font/nunito_bold"
        android:padding="16dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:theme="@style/Theme.Relation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_recovery"
        app:layout_constraintVertical_bias="0.7" />

    <LinearLayout
        android:id="@+id/counter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recover_signin"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/signin_here1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/finish_password_recovery"
            android:textColor="@color/gray_main"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/signin_here2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:alpha="0.8"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/sign_in_here"
            android:textColor="@color/orange_main"
            android:textSize="16sp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="@+id/signup_here1"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>